[fix] add grid prefixes and grid-columns/grid-rows for IE11 support (broken when animation branch was merged)

--- a/src/Components/Month.html
+++ b/src/Components/Month.html
@@ -15,11 +15,10 @@
 <style>
   .month-container { 
     width: 100%;
-    /* white-space: nowrap;
-    display: inline-block;
-    height: 275px;
-    overflow: hidden; */
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr;
+    -ms-grid-rows: 1fr;
   }
 </style>
 
