--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -34,24 +34,31 @@
     display: flex;
     -webkit-flex-flow: row;
     justify-content: space-around;
+    -ms-grid-column: 1;
     grid-column: 1; 
   }
   .week:nth-child(6n + 1) { 
+    -ms-grid-row: 1; 
     grid-row: 1; 
   }
   .week:nth-child(6n + 2) { 
+    -ms-grid-row: 2; 
     grid-row: 2; 
   }
   .week:nth-child(6n + 3) { 
+    -ms-grid-row: 3; 
     grid-row: 3; 
   }
   .week:nth-child(6n + 4) { 
+    -ms-grid-row: 4; 
     grid-row: 4; 
   }
   .week:nth-child(6n + 5) { 
+    -ms-grid-row: 5; 
     grid-row: 5; 
   }
   .week:nth-child(6n + 6) { 
+    -ms-grid-row: 6; 
     grid-row: 6; 
   }
   .day { 
