default isClosing and isOpen to suppress warnings

--- a/src/Components/Datepicker.html
+++ b/src/Components/Datepicker.html
@@ -159,6 +159,8 @@
         year: today.getFullYear(), 
         trigger: null, 
         selectableCallback: null,
+        isOpen: false,
+        isClosing: false,
         assignmentHandler(trigger,formatted) { 
           trigger.innerHTML = formatted;
         }
