--- a/src/Components/Popover.html
+++ b/src/Components/Popover.html
@@ -1,16 +1,16 @@
-<svelte:window bind:innerWidth="w" />
-<div class="popover" ref:popover>
-  <div class="trigger" on:click="open()" ref:triggerContainer>
+<svelte:window bind:innerWidth={w} />
+<div class="popover" bind:this={popover}>
+  <div class="trigger" on:click={doOpen} bind:this={triggerContainer}>
     <slot name="trigger">
     </slot>
   </div>
   <div 
     class="contents-wrapper" 
-    class:visible="open"
-    class:shrink="shrink"
+    class:visible={open}
+    class:shrink={shrink}
     style="transform: translate(-50%,-50%) translate({translateX}px, {translateY}px)" 
-    ref:contentsWrapper>
-    <div class="contents" ref:contentsAnimated>
+    bind:this={contentsWrapper}>
+    <div class="contents" bind:this={contentsAnimated}>
       <div class="contents-inner">
         <slot name="contents"></slot>
       </div>
@@ -102,18 +102,32 @@
 </style>
 
 <script>
+  import { onMount, createEventDispatcher } from 'svelte'
+
+  const dispatch = createEventDispatcher()
+
+  export let open = false;
+  export let shrink;
+  export let trigger;
+
+  let popover
+  let w
+  let triggerContainer
+  let contentsAnimated
+  let contentsWrapper
+  let translateY = 0
+  let translateX = 0
 
   function checkForFocusLoss(evt) { 
-    let { open } = this.get(); 
     if(!open) return;
     let el = evt.target;
     do {
-      if(el == this.refs.popover) return;
+      if(el == popover) return;
     } while(el = el.parentNode)
-    this.close();
+    close();
   }; 
 
-  var once = (el,evt,cb) => { 
+  let once = (el,evt,cb) => { 
     function handler() { 
       cb.apply(this,arguments); 
       el.removeEventListener(evt,handler);
@@ -121,74 +135,70 @@
     el.addEventListener(evt,handler);
   }
 
-  export default { 
-    oncreate() { 
-      document.addEventListener('click',checkForFocusLoss.bind(this)); 
-      let { trigger } = this.get(); 
-      if(!trigger) return; 
-      this.refs.triggerContainer.appendChild(trigger.parentNode.removeChild(trigger));
-    }, 
-    data() { 
-      return { 
-        open: false,
-        shrink: false,
-        translateY: 0,
-        translateX: 0
-      }
-    },
-    methods: { 
-      getDistanceToEdges() { 
-        let { open } = this.get(); 
-        if(!open) this.set({open: true})
-        let { translateX, translateY } = this.get(); 
-        let { contentsWrapper } = this.refs; 
-        let width = contentsWrapper.offsetWidth; 
-        let height = contentsWrapper.offsetHeight; 
-        let rect = contentsWrapper.getBoundingClientRect(); 
-        if(!open) this.set({open: false});
-        return { 
-          top: rect.top + (-1*translateY), 
-          bottom: window.innerHeight - rect.bottom + translateY, 
-          left: rect.left + (-1*translateX), 
-          right: document.body.clientWidth - rect.right + translateX
-        }
-      }, 
-      getTranslate() { 
-        let { w } = this.get(); 
-        let dist = this.getDistanceToEdges(); 
-        let translateX, translateY; 
-        if(w < 480) { 
-          translateY = dist.bottom;
-        } else if(dist.top < 0) { 
-          translateY = Math.abs(dist.top); 
-        } else if(dist.bottom < 0) { 
-          translateY = dist.bottom; 
-        } else { 
-          translateY = 0; 
-        }
-        if(dist.left < 0) { 
-          translateX = Math.abs(dist.left); 
-        } else if(dist.right < 0) { 
-          translateX = dist.right;
-        } else { 
-          translateX = 0; 
-        }
-        return { translateX, translateY }  
-      },
-      open() { 
-        this.set({open: true, ...this.getTranslate()});
-        this.fire('opened');
-      },
-      close() { 
-        this.set({shrink:true});
-        once(this.refs.contentsAnimated, 'animationend', () => {
-          this.set({shrink: false, open: false});
-          this.fire('closed');
-        });
-      }
-    },
-    ondestroy() { 
+  onMount(() => {
+    document.addEventListener('click',checkForFocusLoss.bind(this)); 
+    if(!trigger) return; 
+    triggerContainer.appendChild(trigger.parentNode.removeChild(trigger));
+
+    return () => {
       document.removeEventListener('click', checkForFocusLoss);
     }
+  })
+
+  function getDistanceToEdges() { 
+    if(!open) { open = true }
+    let width = contentsWrapper.offsetWidth; 
+    let height = contentsWrapper.offsetHeight; 
+    let rect = contentsWrapper.getBoundingClientRect(); 
+    return { 
+      top: rect.top + (-1*translateY), 
+      bottom: window.innerHeight - rect.bottom + translateY, 
+      left: rect.left + (-1*translateX), 
+      right: document.body.clientWidth - rect.right + translateX
+    }
+  }
+
+  function getTranslate() { 
+    let dist = getDistanceToEdges(); 
+    let translateX, translateY; 
+    if(w < 480) { 
+      translateY = dist.bottom;
+    } else if(dist.top < 0) { 
+      translateY = Math.abs(dist.top); 
+    } else if(dist.bottom < 0) { 
+      translateY = dist.bottom; 
+    } else { 
+      translateY = 0; 
+    }
+    if(dist.left < 0) { 
+      translateX = Math.abs(dist.left); 
+    } else if(dist.right < 0) { 
+      translateX = dist.right;
+    } else { 
+      translateX = 0; 
+    }
+    return { translateX, translateY }  
+  }
+
+  function doOpen() { 
+    const {
+      translateX,
+      translateY
+    } = getTranslate()
+
+    translateX = translateX
+    translateY = translateY
+    open = true
+
+    dispatch('opened');
+  }
+
+  export function close() { 
+    shrink = true
+    once(contentsAnimated, 'animationend', () => {
+      shrink = false
+      open = false
+      dispatch('closed')
+    });
   }
 </script>
